@@ -23,6 +23,10 @@ ntp-groper	script useful for reaching out and rattling the cages of
 
 ntp-restart	script useful for killing and restarting the NTP daemon
 
+ntp-wait	Blocks until ntpd is in state 4 (synchronized).
+		Hopefully useful at boot time, to delay the boot sequence
+		until after "ntpd -g" has set the time.
+
 ntpsweep	prints per host given in <file> the NTP stratum level, the
 		clock offset in seconds, the daemon version, the operating
 		system and the processor.
