@@ -1,4 +1,4 @@
-#! /usr/local/bin/perl
+#! @PATH_PERL@
 #
 # drift of 104.8576 -> +1 tick.  Base  of 10000 ticks.
 #
