@@ -1,6 +1,6 @@
-#!/usr/local/bin/perl -w
+#! @PATH_PERL@ -w
 #
-# $Id: .del-ntpsweep~dff61aa1 1.3 2000/01/15 07:37:52-00:00 stenn@whimsy.udel.edu $
+# $Id: ntpsweep.in 1.1 2000/02/10 08:13:40-00:00 stenn@whimsy.udel.edu $
 #
 # DISCLAIMER
 # 
